# Computer-Science-UBB

./: README.md
1.Semester/: README.md
1.Semester/Algebra/: README.md
1.Semester/Grundlagen der Programmierung/: README.md
1.Semester/Grundlagen der Programmierung/Labor/: README.md
1.Semester/Grundlagen der Programmierung/Labor/lab1/: aufgabe_1a.py  aufgabe_1b.py  aufgabe_3a.py  aufgabe_3b.py
1.Semester/Grundlagen der Programmierung/Seminar/: seminar_0211.py  seminar_0712.py  seminar_1910.py  seminar_2610.py
1.Semester/Logik/: README.md
2.Semester/: README.md
2.Semester/Datenstrukturen und Algorithmen/Labor/Labor 2/IndexedList/: CMakeLists.txt  IndexedList.cpp  IndexedList.h  ListIterator.cpp  ListIterator.h  ShortTest.cpp
2.Semester/Dynamische Systeme/: exam_practic.txt
2.Semester/Dynamische Systeme/Labor/: Lab1.ipynb  Lab2.ipynb  Lab3.ipynb  Lab6.ipynb  lab4.ipynb
2.Semester/Objektorientierte Programmierung/Labor/Labor 1/Lab1UItest/: AutoUI.h  CMakeLists.txt  CustomerUI.h  EmployeeUI.h  FinalUI.cpp  FinalUI.h  adminUI.h
2.Semester/Objektorientierte Programmierung/Vorlesungen/: Vorlesung-10.pptx  Vorlesung-11.pptx  Vorlesung-2.pptx  Vorlesung-4.pptx  Vorlesung-5.pptx  Vorlesung-6.pptx  Vorlesung-7.pptx  Vorlesung-8.pptx
3.Semester/: README.md
3.Semester/Wahrscheinlichkeitsrechnung und Statistik/: STATISTICA PRACTIC.docx
3.Semester/Wahrscheinlichkeitsrechnung und Statistik/Labor/: Labor3_A1_A2_A4.txt  Labor4_A1_A4.txt
Vorlesungen/: Vorlesung-1.pptx  Vorlesung-3.pptx
lab1/src/: Main.java  task1.java  task2.java  task3.java  task4.java
(+107 files in other folders)
